<resources>
    <string name="app_name">Entrenamientos de nadador</string>
    <string name="add_button">Añadir</string>
    <string name="update_button">Editar</string>
    <string name="delete_button">Borrar</string>
    <string name="fab">Añadir</string>
    <string name="title_activity_transition_add">Añadir Entrenamiento</string>
    <string name="title_activity_conf">Informacion del usuario</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="anhadir">Añadir</string>
    <string name="stats">Estadísticas</string>
    <string name="conf">Configuración</string>
    <string name="title_activity_stats">Estadísticas generales</string>
    <string name="ok">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="errores">Errores</string>
    <string name="titulo_stats">Estadísticas</string>
    <string name="tiempo">Tiempo</string>
    <string name="distancia">Distancia</string>
    <string name="piscina_grande">Piscina grande</string>
    <string name="piscina_media">Piscina media</string>
    <string name="aguas_abiertas">Aguas abiertas</string>
    <string name="add_title">Nuevo Entrenamiento</string>
    <string name="confg">Configuración</string>
    <string name="Edad">Edad</string>
    <string name="Nombre">Nombre</string>
    <string name="Nacionalidad">Nacionalidad</string>
    <string name="Español">español</string>
    <string name="Ingles">ingles</string>


    <string-array name="languages" >
        <item>@string/Español</item>
        <item>@string/Ingles</item>
    </string-array>

</resources>
